bugfix tab bold on hover causing elements shift

--- a/frontend/src/ui/css/blueprint-overrides.scss
+++ b/frontend/src/ui/css/blueprint-overrides.scss
@@ -35,8 +35,7 @@
     color: $seamap-color-2;
     font-size: 14px;
 
-    &[aria-selected="true"],
-    &:not([aria-disabled="true"]):hover {
+    &[aria-selected="true"] {
         font-weight: bold;
     }
 
